Update social links in index.html to include icons and adjust styles in styles.css for improved layout and responsiveness. Removed unnecessary comments and adjusted heights for menu elements.

--- a/index.html
+++ b/index.html
@@ -521,9 +521,18 @@
             <div class="contact-item">
               <span class="contact-label">Social</span>
               <div class="social-links">
-                <a href="#" class="social-link">LinkedIn</a>
-                <a href="#" class="social-link">GitHub</a>
-                <a href="#" class="social-link">WhatsApp</a>
+                <a href="#" class="social-link">
+                  <i class="fab fa-linkedin"></i>
+                  LinkedIn
+                </a>
+                <a href="#" class="social-link">
+                  <i class="fab fa-github"></i>
+                  GitHub
+                </a>
+                <a href="#" class="social-link">
+                  <i class="fab fa-whatsapp"></i>
+                  WhatsApp
+                </a>
               </div>
             </div>
           </div>
