Add Clínica Dental project to index.html and update box-shadow in styles.css

--- a/index.html
+++ b/index.html
@@ -288,6 +288,27 @@
                   </div>
                 </a>
               </div>
+             
+              <div class="project-item" >
+                <a href="https://codigodigitaldev.com/clinicadental/" target="_blank" rel="noopener noreferrer" class="project-link">
+                  <div class="project-image">
+                    <img src="./assets/image/clinidental.png" alt="Imagen de la web de clínica dental" height="1200px" width="2500px">
+                    <div class="project-overlay">
+                      <div class="project-info">
+                        <h3>Clínica Dental</h3>
+                        <div class="project-tech">
+                          <span class="tech-tag">WordPress</span>
+                        </div>
+                        <p class="project-description">
+                          Web para una clínica dental.</p>
+                        <div class="project-link-text">
+                          <span>Ver proyecto →</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
               
               <div class="project-item" >
                 <a href="https://codigodigitaldev.com/clinic/index.php" target="_blank" rel="noopener noreferrer" class="project-link">
