Add favicon links to index.html and update contact labels for better localization

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <title>Portfolio | Emilio Mochón</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link
@@ -536,11 +541,11 @@
               <a href="mailto:sayhello@ethos.com" class="contact-value">emmyjose82@hotmail.com</a>
             </div>
             <div class="contact-item">
-              <span class="contact-label">Phone</span>
+              <span class="contact-label">Teléfono</span>
               <a href="tel:+1975432345" class="contact-value">657437142</a>
             </div>
             <div class="contact-item">
-              <span class="contact-label">Social</span>
+              <span class="contact-label">Redes Sociales</span>
               <div class="social-links">
                 <a href="#" class="social-link">
                   <i class="fab fa-linkedin"></i>
@@ -550,7 +555,7 @@
                   <i class="fab fa-github"></i>
                   GitHub
                 </a>
-                <a href="#" class="social-link">
+                <a href="https://wa.me/34657437142" class="social-link" target="_blank" rel="noopener">
                   <i class="fab fa-whatsapp"></i>
                   WhatsApp
                 </a>
