Update social links in index.html with direct URLs, enhance scroll-to-top functionality in footer.js, and improve styles in styles.css for better layout and user experience.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   </head>
   <body>
-    <header>
+    <header id="inicio">
       <!-- Navbar -->
       <nav class="navbar">
         <div class="navbar-container">
@@ -42,8 +42,8 @@
 
           <!-- Enlaces sociales -->
           <div class="navbar-links">
-            <a href="#" class="social-link">GitHub</a>
-            <a href="#" class="social-link">LinkedIn</a>
+            <a href="https://github.com/emmy1982" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile" class="social-link">GitHub</a>
+            <a href="https://es.linkedin.com/in/emilio-moch%C3%B3n-gonz%C3%A1lez-36498a374?trk=profile-badge" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile" class="social-link">LinkedIn</a>
           </div>
 
           <!-- Botón de menú -->
@@ -86,11 +86,11 @@
           </a>
           <div class="menu-footer">
             <div class="menu-social">
-              <a href="#" class="social-link">
+              <a href="https://github.com/emmy1982" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile" class="social-link">
                 <i class="fab fa-github"></i>
                 GitHub
               </a>
-              <a href="#" class="social-link">
+              <a href="https://es.linkedin.com/in/emilio-moch%C3%B3n-gonz%C3%A1lez-36498a374?trk=profile-badge" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile" class="social-link">
                 <i class="fab fa-linkedin"></i>
                 LinkedIn
               </a>
@@ -112,8 +112,8 @@
 
             <!-- Enlaces sociales -->
             <div class="links-hero">
-              <a href="#" class="social-link">GitHub/</a>
-              <a href="#" class="social-link">LinkedIn</a>
+              <a href="https://github.com/emmy1982" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile" class="social-link">GitHub/</a>
+              <a href="https://es.linkedin.com/in/emilio-moch%C3%B3n-gonz%C3%A1lez-36498a374?trk=profile-badge" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile" class="social-link">LinkedIn</a>
             </div>
           </div>
           <div class="image-hero">
@@ -149,12 +149,11 @@
             <div class="about-profile">
               <h3>Perfil</h3>
               <p>
-                Soy un desarrollador web apasionado por crear experiencias
+                Soy un desarrollador web que le gusta crear experiencias
                 digitales únicas. Me especializo en desarrollar sitios web
                 modernos, responsivos y con un enfoque en una experiencia fluida
-                y atractiva para el usuario. Mi objetivo es transformar ideas en
-                realidades digitales que no solo se vean increíbles, sino que
-                también funcionen de manera excepcional.
+                y atractiva para el usuario. Mi objetivo es transformar la idea del cliente en una realidad y que no solo se vean increíbles, sino que
+                también funcionen de manera correcta.
               </p>
             </div>
           </div>
@@ -183,8 +182,7 @@
                   de mis habilidades
                 </h2>
                 <p class="skills-description">
-                  Creador de experiencias digitales únicas y sitios web que
-                  destacan por su diseño innovador. Me especializo en crear
+                  Me gusta crear paginas web que destaquen por su diseño innovador. Me especializo en crear
                   interfaces atractivas y responsivas.
                 </p>
               </div>
@@ -529,9 +527,9 @@
           <div class="footer-section">
             <span class="footer-label">CONTACTO</span>
             <h3 class="footer-cta">Estoy siempre abierto a emprender nuevos proyectos, oportunidades creativas o simplemente conversar sobre diseño web.</h3>
-            <div class=" footer-button" onclick="window.location.href='mailto:emmyjose82@hotmail.com'">
+            <a href="mailto:emmyjose82@hotmail.com" class="footer-button">
               <span>HABLEMOS</span>
-            </div>
+            </a>
           </div>
         </div>
         <div class="footer-right">
@@ -547,11 +545,11 @@
             <div class="contact-item">
               <span class="contact-label">Redes Sociales</span>
               <div class="social-links">
-                <a href="#" class="social-link">
+                <a href="https://es.linkedin.com/in/emilio-moch%C3%B3n-gonz%C3%A1lez-36498a374?trk=profile-badge" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile" class="social-link">
                   <i class="fab fa-linkedin"></i>
                   LinkedIn
                 </a>
-                <a href="#" class="social-link">
+                <a href="https://github.com/emmy1982" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile" class="social-link">
                   <i class="fab fa-github"></i>
                   GitHub
                 </a>
@@ -566,9 +564,9 @@
         <div class="footer-decoration">
           <div class="vertical-line"></div>
         </div>
-        <button class="scroll-to-top" onclick="scrollToTop()">
+        <a href="#inicio" class="scroll-to-top">
           <i class="fas fa-arrow-up"></i>
-        </button>
+        </a>
       </div>
     </footer>
 
