Refactor footer structure in index.html, remove loading.js, and update animations.js to initiate effects immediately. Enhance responsive styles in styles.css for better layout on smaller screens.

--- a/index.html
+++ b/index.html
@@ -521,7 +521,9 @@
       </section>
     </main>
 
-    <footer class="footer-dark">
+    <!-- Footer -->
+
+    <footer class="footer-dark" id="contacto">
       <div class="footer-container">
         <div class="footer-left">
           <div class="footer-section">
@@ -573,7 +575,6 @@
 
     <script src="js/navbar/navbar.js"></script>
     <script src="js/footer.js"></script>
-    <script src="js/loading.js"></script>
     <script src="js/animations.js"></script>
   </body>
 </html>
