Refactor index.html to improve accessibility and consistency; replace div with span for hamburger icon, adjust project image attributes for proper height formatting, and ensure uniformity across project items.

--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
           <!-- Botón de menú -->
           <button class="menu-btn" id="menuBtn">
             <span class="menu-text">MENU</span>
-            <div class="hamburger">
+            <span class="hamburger" aria-hidden="true">
               <span></span>
               <span></span>
               <span></span>
-            </div>
+            </span>
           </button>
         </div>
       </nav>
@@ -254,7 +254,8 @@
           <div class="skills-container">
             <div class="skills-header">
               <span class="about-label">SKILLS</span>
-              <div class="about-main-title-dark">
+            </div>
+            <div class="about-main-title-dark">
                 <div class="number-bg-dark">02</div>
                 <h2>
                   Estas son algunas <br />
@@ -326,7 +327,7 @@
               <div class="project-item" >
                 <a href="https://emmy1982.github.io/proyectFinal03/" target="_blank" rel="noopener noreferrer" class="project-link">
                                      <div class="project-image">
-                     <img src="./assets/image/webArquitectura.png" alt="Proyecto web empresa de arquitectura y diseño - Emilio Mochón" height="1200px" width="2500px">
+                     <img src="./assets/image/webArquitectura.png" alt="Proyecto web empresa de arquitectura y diseño - Emilio Mochón" height="1200" width="2500">
                     <div class="project-overlay">
                       <div class="project-info">
                         <h3>Empresa de Arquitectura y Diseño</h3>
@@ -351,7 +352,7 @@
               <div class="project-item" >
                 <a href="https://emmy1982.github.io/Lopez/index.html" target="_blank" rel="noopener noreferrer" class="project-link">
                                      <div class="project-image">
-                     <img src="./assets/image/academia.png" alt="Proyecto web academia de oposiciones - Emilio Mochón" height="1200px" width="2500px">
+                     <img src="./assets/image/academia.png" alt="Proyecto web academia de oposiciones - Emilio Mochón" height="1200" width="2500">
                     <div class="project-overlay">
                       <div class="project-info">
                         <h3>Academia de Oposiciones</h3>
@@ -374,7 +375,7 @@
               <div class="project-item" >
                 <a href="https://codigodigitaldev.com/clinicadental/" target="_blank" rel="noopener noreferrer" class="project-link">
                   <div class="project-image">
-                    <img src="./assets/image/clinidental.png" alt="Imagen de la web de clínica dental" height="1200px" width="2500px">
+                    <img src="./assets/image/clinidental.png" alt="Imagen de la web de clínica dental" height="1200" width="2500">
                     <div class="project-overlay">
                       <div class="project-info">
                         <h3>Clínica Dental</h3>
@@ -395,7 +396,7 @@
               <div class="project-item" >
                 <a href="https://codigodigitaldev.com/clinic/index.php" target="_blank" rel="noopener noreferrer" class="project-link">
                   <div class="project-image">
-                    <img src="./assets/image/clinicaDental.png" alt="Imagen de la web de clinica dental" height="1200px" width="2500px">
+                    <img src="./assets/image/clinicaDental.png" alt="Imagen de la web de clinica dental" height="1200" width="2500">
                     <div class="project-overlay">
                       <div class="project-info">
                         <h3>Clinica Dental</h3>
@@ -418,7 +419,7 @@
               <div class="project-item" >
                 <a href="https://emmy1982.github.io/Delirio/" target="_blank" rel="noopener noreferrer" class="project-link">
                   <div class="project-image">
-                    <img src="./assets/image/restaurante.png" alt="Imagen de la web de restaurante" height="1200px" width="2500px">
+                    <img src="./assets/image/restaurante.png" alt="Imagen de la web de restaurante" height="1200" width="2500">
                     <div class="project-overlay">
                       <div class="project-info">
                         <h3>Restaurante Deluxe</h3>
@@ -441,7 +442,7 @@
               <div class="project-item" >
                 <a href="https://emmy1982.github.io/barbershop/" target="_blank" rel="noopener noreferrer" class="project-link">
                   <div class="project-image">
-                    <img src="./assets/image/barbershop.png" alt="Imagen de la web de barbershop" height="1200px" width="2500px">
+                    <img src="./assets/image/barbershop.png" alt="Imagen de la web de barbershop" height="1200" width="2500">
                     <div class="project-overlay">
                       <div class="project-info">
                         <h3>Barbería</h3>
@@ -463,7 +464,7 @@
               <div class="project-item" >
                 <a href="https://emmy1982.github.io/Proyect_psico/" target="_blank" rel="noopener noreferrer" class="project-link">
                   <div class="project-image">
-                    <img src="./assets/image/clinicaPsicologia.png" alt="Imagen de la web de clínica psicología" height="1200px" width="2500px">
+                    <img src="./assets/image/clinicaPsicologia.png" alt="Imagen de la web de clínica psicología" height="1200" width="2500">
                     <div class="project-overlay">
                       <div class="project-info">
                         <h3>Clínica de Psicología</h3>
@@ -485,7 +486,7 @@
               <div class="project-item" >
                 <a href="https://codigodigitaldev.com/Car/" target="_blank" rel="noopener noreferrer" class="project-link">
                   <div class="project-image">
-                    <img src="./assets/image/constop.png" alt="Imagen de la web de empresa de construcción" height="1200px" width="2500px">
+                    <img src="./assets/image/constop.png" alt="Imagen de la web de empresa de construcción" height="1200" width="2500">
                     <div class="project-overlay">
                       <div class="project-info">
                         <h3>Empresa de Construcción</h3>
@@ -507,7 +508,7 @@
               <div class="project-item" >
                 <a href="https://codigodigital.great-site.net/prueba/" target="_blank" rel="noopener noreferrer" class="project-link">
                   <div class="project-image">
-                    <img src="./assets/image/ecommerce.png" alt="Imagen de la web de ecommerce" height="1200px" width="2500px">
+                    <img src="./assets/image/ecommerce.png" alt="Imagen de la web de ecommerce" height="1200" width="2500">
                     <div class="project-overlay">
                       <div class="project-info">
                         <h3>Ecommerce</h3>
@@ -528,7 +529,7 @@
               <div class="project-item" >
                 <a href="https://emmy1982.github.io/Pro_01_WEB-CON-FORM/" target="_blank" rel="noopener noreferrer" class="project-link">
                   <div class="project-image">
-                    <img src="./assets/image/tattoo.png" alt="Imagen de la web de tattoo" height="1200px" width="2500px">
+                    <img src="./assets/image/tattoo.png" alt="Imagen de la web de tattoo" height="1200" width="2500">
                     <div class="project-overlay">
                       <div class="project-info">
                         <h3>Estudio de  Tattoo</h3>
@@ -551,7 +552,7 @@
               <div class="project-item" >
                 <a href="https://emmy1982.github.io/Deco/index.html" target="_blank" rel="noopener noreferrer" class="project-link">
                   <div class="project-image">
-                    <img src="./assets/image/deco.png" alt="Imagen de la web de decoración" height="1200px" width="2500px">
+                    <img src="./assets/image/deco.png" alt="Imagen de la web de decoración" height="1200" width="2500">
                     <div class="project-overlay">
                       <div class="project-info">
                         <h3>Tienda de Decoración Concept</h3>
@@ -574,7 +575,7 @@
               <div class="project-item" >
                 <a href="https://emmy1982.github.io/prueba-navbar/" target="_blank" rel="noopener noreferrer" class="project-link">
                   <div class="project-image">
-                    <img src="./assets/image/construction.png" alt="Imagen de la web de construcción" height="1200px" width="2500px">
+                    <img src="./assets/image/construction.png" alt="Imagen de la web de construcción" height="1200" width="2500">
                     <div class="project-overlay">
                       <div class="project-info">
                         <h3>Empresa de Construcción</h3>
