Add new projects to portfolio in index.html and adjust project image height in styles.css for improved layout

--- a/index.html
+++ b/index.html
@@ -394,6 +394,54 @@
               </div>
               
               <div class="project-item" >
+                <a href="https://emmy1982.github.io/tresmonos-final/index.html" target="_blank" rel="noopener noreferrer" class="project-link">
+                  <div class="project-image">
+                    <img src="./assets/image/studioTattoo.png" alt="Imagen de la web de tattoo" height="1200" width="2500">
+                    <div class="project-overlay">
+                      <div class="project-info">
+                        <h3>Estudio de  Tattoo</h3>
+                        <div class="project-tech">
+                          <span class="tech-tag">HTML5</span>
+                          <span class="tech-tag">CSS3</span>
+                          <span class="tech-tag">JavaScript</span>
+                        </div>
+                        <p class="project-description">
+                          Web para un estudio de tattoo, con un diseño moderno y atractivo.
+                        </p>
+                        <div class="project-link-text">
+                          <span>Ver proyecto →</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+
+              <div class="project-item" >
+                <a href="https://emmy1982.github.io/mifundless/" target="_blank" rel="noopener noreferrer" class="project-link">
+                  <div class="project-image">
+                    <img src="./assets/image/asociación.png" alt="Imagen de la web de restaurante" height="1200" width="2500">
+                    <div class="project-overlay">
+                      <div class="project-info">
+                        <h3>Asociación para niños con problemas</h3>
+                        <div class="project-tech">
+                          <span class="tech-tag">HTML5</span>
+                          <span class="tech-tag">CSS3</span>
+                          <span class="tech-tag">JavaScript</span>
+                        </div>
+                        <p class="project-description">
+                          Web para una asociación para niños con problemas, con un diseño infantil y atractivo.
+                        </p>
+                        <div class="project-link-text">
+                          <span>Ver proyecto →</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+
+              <div class="project-item" >
                 <a href="https://codigodigitaldev.com/clinic/index.php" target="_blank" rel="noopener noreferrer" class="project-link">
                   <div class="project-image">
                     <img src="./assets/image/clinicaDental.png" alt="Imagen de la web de clinica dental" height="1200" width="2500">
@@ -416,6 +464,7 @@
                   </div>
                 </a>
               </div>
+
               <div class="project-item" >
                 <a href="https://emmy1982.github.io/Delirio/" target="_blank" rel="noopener noreferrer" class="project-link">
                   <div class="project-image">
@@ -439,6 +488,7 @@
                   </div>
                 </a>
               </div>
+
               <div class="project-item" >
                 <a href="https://emmy1982.github.io/barbershop/" target="_blank" rel="noopener noreferrer" class="project-link">
                   <div class="project-image">
@@ -526,29 +576,7 @@
                   </div>
                 </a>
               </div>
-              <div class="project-item" >
-                <a href="https://emmy1982.github.io/Pro_01_WEB-CON-FORM/" target="_blank" rel="noopener noreferrer" class="project-link">
-                  <div class="project-image">
-                    <img src="./assets/image/tattoo.png" alt="Imagen de la web de tattoo" height="1200" width="2500">
-                    <div class="project-overlay">
-                      <div class="project-info">
-                        <h3>Estudio de  Tattoo</h3>
-                        <div class="project-tech">
-                          <span class="tech-tag">HTML5</span>
-                          <span class="tech-tag">CSS3</span>
-                          <span class="tech-tag">JavaScript</span>
-                        </div>
-                        <p class="project-description">
-                          Web para un estudio de tattoo, con un diseño moderno y atractivo.
-                        </p>
-                        <div class="project-link-text">
-                          <span>Ver proyecto →</span>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
+              
               <div class="project-item" >
                 <a href="https://emmy1982.github.io/Deco/index.html" target="_blank" rel="noopener noreferrer" class="project-link">
                   <div class="project-image">
