Add new project for "Recursos para maestros" to portfolio in index.html, including project details and image.

--- a/index.html
+++ b/index.html
@@ -623,6 +623,29 @@
                   </div>
                 </a>
               </div>
+              
+              <div class="project-item" >
+                <a href="https://codigodigitaldev.com/tienda/" target="_blank" rel="noopener noreferrer" class="project-link">
+                  <div class="project-image">
+                    <img src="./assets/image/aulaardillas.png" alt="Imagen de la web de construcción" height="1200" width="2500">
+                    <div class="project-overlay">
+                      <div class="project-info">
+                        <h3>Recursos para maestros</h3>
+                        <div class="project-tech">
+                          <span class="tech-tag">WordPress</span>
+                          
+                        </div>
+                        <p class="project-description">
+                          Web para una instagramer de recursos para maestros, creada con WordPress.
+                        </p>
+                        <div class="project-link-text">
+                          <span>Ver proyecto →</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
             </div>
           </div>
         </div>
