Add responsive design skill item in index.html and enhance styles for better hover effects in styles.css.

--- a/index.html
+++ b/index.html
@@ -295,13 +295,17 @@
               </div>
               <div class="skill-item">
                 <img
-                  src="./assets/image/adobe-photoshop.png"
-                  alt="Photoshop"
-                  width="35"
-                  height="35"
-                  loading="lazy"
+                src="./assets/image/adobe-photoshop.png"
+                alt="Photoshop"
+                width="35"
+                height="35"
+                loading="lazy"
                 />
                 <span>Photoshop</span>
+              </div>
+              <div class="skill-item">
+                <i class="responsive-design">@</i>
+                <span class="responsive-design">Responsive Design</span>
               </div>
             </div>
             <div class="skills-vertical-line"></div>
